--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 
 <head>
   <meta charset="UTF-8">
@@ -99,10 +99,11 @@
   <footer>
     <a href="">WebStudio</a>
     <address>
-      м. Київ, пр-т Лесі Українки, 26 <br>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
-
+      <p>м. Київ, пр-т Лесі Українки, 26</p>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </address>
   </footer>
 </body>
