--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Студія</title>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <!-- Розмітка сторінки Студія -->
@@ -15,16 +18,17 @@
   <header>
 
     <nav>
-      <a href="">WebStudio</a>
-      <ul>
-        <li><a href="./index.html">Студія</a></li>
-        <li><a href="./portfolio.html">Портфоліо</a></li>
-        <li><a href="">Контакти</a></li>
+      <a href="" class="logo"><span class="logo-text">Web</span>Studio</a>
+
+      <ul class="site-nav list">
+        <li><a href="./index.html" class="link">Студія</a></li>
+        <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+        <li><a href="" class="link">Контакти</a></li>
       </ul>
     </nav>
-    <ul>
-      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <ul class="contacts-nav list">
+      <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+      <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
     </ul>
 
 
@@ -32,77 +36,77 @@
 
   <main>
     <!-- Шапка -->
-    <section>
-      <h1>Ефективні рішення для вашого бізнесу</h1>
-      <button type="button">Замовити послугу</button>
+    <section class="heroy">
+      <h1 class="heroy-text">Ефективні рішення для вашого бізнесу</h1>
+      <button type="button" class="button">Замовити послугу</button>
     </section>
     <!-- Особливості -->
-    <section>
-      <h2>Особливості</h2>
-      <ul>
+    <section class="section">
+      <h2 class="section-title">Особливості</h2>
+      <ul class="features list">
         <li>
-          <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-          <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+          <h3 class="section-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+          <p class="features-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
         </li>
         <li>
-          <h3>ПУНКТУАЛЬНІСТЬ</h3>
-          <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+          <h3 class="section-title">ПУНКТУАЛЬНІСТЬ</h3>
+          <p class="features-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
         </li>
         <li>
-          <h3>ПЛАНУВАННЯ</h3>
-          <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+          <h3 class="section-title">ПЛАНУВАННЯ</h3>
+          <p class="features-text">Так само консультація з широким активом значною мірою зумовлює.</p>
         </li>
         <li>
-          <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-          <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+          <h3 class="section-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+          <p class="features-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
         </li>
       </ul>
     </section>
     <!-- Чим ми займаємося -->
-    <section>
-      <h2>Чим ми займаємося</h2>
-      <ul>
+    <section class="section">
+      <h2 class="section-title example">Чим ми займаємося</h2>
+      <ul class="list">
         <li><img src="./images/box1.jpg" alt="Десктопні додатки" width="370" height="294"> </li>
         <li><img src="./images/box2.jpg" alt="Мобільні додатки" width="370" height="294"> </li>
         <li><img src="./images/box3.jpg" alt="Дизайнерські рішення" width="370" height="294"> </li>
       </ul>
     </section>
     <!-- Наша команда -->
-    <section>
-      <h2>Наша команда</h2>
-      <ul>
+    <section class="section team">
+      <h2 class="section-title team">Наша команда</h2>
+      <ul class="list">
         <li>
           <img src="./images/team_card_1.jpg" alt="Ігор Дем'яненко" width="270" height="260">
-          <h3>Ігор Дем'яненко</h3>
-          <p>Product Designer</p>
+          <h3 class="section-title member">Ігор Дем'яненко</h3>
+          <p class="profession">Product Designer</p>
         </li>
         <li>
           <img src="./images/team_card_2.jpg" alt="Ольга Рєпіна" width="270" height="260">
-          <h3>Ольга Рєпіна</h3>
-          <p>Frontend Developer</p>
+          <h3 class="section-title member">Ольга Рєпіна</h3>
+          <p class="profession">Frontend Developer</p>
         </li>
         <li>
           <img src="./images/team_card_3.jpg" alt="Микола Тарасов" width="270" height="260">
-          <h3>Микола Тарасов</h3>
-          <p>Marketing</p>
+          <h3 class="section-title member">Микола Тарасов</h3>
+          <p class="profession">Marketing</p>
         </li>
         <li>
           <img src="./images/team_card_4.jpg" alt="Михайло Єрмаков" width="270" height="260">
-          <h3>Михайло Єрмаков</h3>
-          <p>UI Designer</p>
+          <h3 class="section-title member">Михайло Єрмаков</h3>
+          <p class="profession">UI Designer</p>
         </li>
       </ul>
     </section>
   </main>
 
   <!-- Підвал -->
-  <footer>
-    <a href="">WebStudio</a>
-    <address>
-      <p>м. Київ, пр-т Лесі Українки, 26</p>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+  <footer class="footer">
+    <a href=""><span class="logo-text">Web</span><span class="footer-text">Studio</span></a>
+    <address class="footer-address">
+      <p class="text">м. Київ, пр-т Лесі Українки, 26</p>
+      <ul class="footer-contacts list">
+        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
     </address>
   </footer>
