--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Портфоліо</title>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <!-- Портфоліо -->
@@ -16,16 +19,17 @@
   <header>
 
     <nav>
-      <a href="">WebStudio</a>
-      <ul>
-        <li><a href="./index.html">Студія</a></li>
-        <li><a href="./portfolio.html">Портфоліо</a></li>
-        <li><a href="">Контакти</a></li>
+      <a href="" class="logo"> <span class="logo-text">Web</span>Studio</a>
+
+      <ul class="site-nav list">
+        <li><a href="./index.html" class="link">Студія</a></li>
+        <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+        <li><a href="" class="link">Контакти</a></li>
       </ul>
     </nav>
-    <ul>
-      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <ul class="contacts-nav list">
+      <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+      <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
     </ul>
 
 
@@ -37,78 +41,78 @@
 
       <h1>Наші роботи</h1>
 
-      <ul>
-        <li><button type="button">Усі</button> </li>
-        <li><button type="button">Веб-сайти</button> </li>
-        <li><button type="button">Додатки</button> </li>
-        <li><button type="button">Дизайн</button> </li>
-        <li><button type="button">Маркетинг</button> </li>
+      <ul class="filters list">
+        <li><button type="button" class="button">Усі</button> </li>
+        <li><button type="button" class="button">Веб-сайти</button> </li>
+        <li><button type="button" class="button">Додатки</button> </li>
+        <li><button type="button" class="button">Дизайн</button> </li>
+        <li><button type="button" class="button">Маркетинг</button> </li>
       </ul>
 
 
 
-      <ul>
+      <ul class="work-list list">
         <li>
           <a href="">
-            <img src="./images/project1.jpg" alt="">
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
+            <img src="./images/project1.jpg" alt="Технокряк" width="370" height="294">
+            <h2 class="section-title type">Технокряк</h2>
+            <p class="work-text">Веб-сайт</p>
           </a>
         </li>
         <li>
           <a href="">
-            <img src="./images/project2.jpg" alt="">
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
+            <img src="./images/project2.jpg" alt="Дизайн" width="370" height="294">
+            <h2 class="section-title type">Постер New Orlean vs Golden Star</h2>
+            <p class="work-text">Дизайн</p>
           </a>
         </li>
         <li>
           <a href="">
-            <img src="./images/project3.jpg" alt="">
-            <h2>Ресторан Seafood</h2>
-            <p>Додаток</p>
+            <img src="./images/project3.jpg" alt="Ресторан Seafood" width="370" height="294">
+            <h2 class="section-title type">Ресторан Seafood</h2>
+            <p class="work-text">Додаток</p>
           </a>
         </li>
         <li>
           <a href="">
-            <img src="./images/project4.jpg" alt="">
-            <h2>Проєкт Prime</h2>
-            <p>Маркетинг</p>
+            <img src="./images/project4.jpg" alt="Проєкт Prime" width="370" height="294">
+            <h2 class="section-title type">Проєкт Prime</h2>
+            <p class="work-text">Маркетинг</p>
           </a>
         </li>
         <li>
           <a href="">
-            <img src="./images/project5.jpg" alt="">
-            <h2>Проєкт Boxes</h2>
-            <p>Додаток</p>
+            <img src="./images/project5.jpg" alt="Проєкт Boxes" width="370" height="294">
+            <h2 class="section-title type">Проєкт Boxes</h2>
+            <p class="work-text">Додаток</p>
           </a>
         </li>
         <li>
           <a href="">
-            <img src="./images/project6.jpg" alt="">
-            <h2>Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
+            <img src="./images/project6.jpg" alt="Inspiration has no Borders" width="370" height="294">
+            <h2 class="section-title type">Inspiration has no Borders</h2>
+            <p class="work-text">Веб-сайт</p>
           </a>
         </li>
         <li>
           <a href="">
-            <img src="./images/project7.jpg" alt="">
-            <h2></h2>
-            <p></p>
+            <img src="./images/project7.jpg" alt="Видання Limited Edition" width="370" height="294">
+            <h2 class="section-title">Видання Limited Edition</h2>
+            <p class="work-text">Дизайн</p>
           </a>
         </li>
         <li>
           <a href="">
-            <img src="./images/project8.jpg" alt="">
-            <h2>Видання Limited Edition</h2>
-            <p>Дизайн</p>
+            <img src="./images/project8.jpg" alt="Проєкт LAB" width="370" height="294">
+            <h2 class="section-title">Проєкт LAB</h2>
+            <p class="work-text">Дизайн</p>
           </a>
         </li>
         <li>
           <a href="">
-            <img src="./images/project9.jpg" alt="">
-            <h2>Проєкт LAB</h2>
-            <p>Маркетинг</p>
+            <img src="./images/project9.jpg" alt="Growing Business" width="370" height="294">
+            <h2 class="section-title">Growing Business</h2>
+            <p class="work-text">Маркетинг</p>
           </a>
         </li>
       </ul>
@@ -118,13 +122,13 @@
 
 
   <!-- Підвал -->
-  <footer>
-    <a href="">WebStudio</a>
-    <address>
-      <p>м. Київ, пр-т Лесі Українки, 26</p>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+  <footer class="footer">
+    <a href=""><span class="logo-text">Web</span><span class="footer-text">Studio</span></a>
+    <address class="footer-address">
+      <p class="text">м. Київ, пр-т Лесі Українки, 26</p>
+      <ul class="footer-contacts list">
+        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
     </address>
   </footer>
