Редактирует названия классам, редактирует  после проверки

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header>
 
     <nav>
-      <a href="" class="logo"><span class="logo-text">Web</span>Studio</a>
+      <a href="" class="logo link"><span class="logo-text">Web</span>Studio</a>
 
       <ul class="site-nav list">
         <li><a href="./index.html" class="link">Студія</a></li>
@@ -36,13 +36,13 @@
 
   <main>
     <!-- Шапка -->
-    <section class="heroy">
-      <h1 class="heroy-text">Ефективні рішення для вашого бізнесу</h1>
+    <section class="hero">
+      <h1 class="hero-text">Ефективні рішення для вашого бізнесу</h1>
       <button type="button" class="button">Замовити послугу</button>
     </section>
     <!-- Особливості -->
     <section class="section">
-      <h2 class="section-title">Особливості</h2>
+      <h2 class="section-title visually-hidden">Особливості</h2>
       <ul class="features list">
         <li>
           <h3 class="section-title">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -63,8 +63,8 @@
       </ul>
     </section>
     <!-- Чим ми займаємося -->
-    <section class="section">
-      <h2 class="section-title example">Чим ми займаємося</h2>
+    <section class="section examples">
+      <h2 class="section-title">Чим ми займаємося</h2>
       <ul class="list">
         <li><img src="./images/box1.jpg" alt="Десктопні додатки" width="370" height="294"> </li>
         <li><img src="./images/box2.jpg" alt="Мобільні додатки" width="370" height="294"> </li>
@@ -73,27 +73,27 @@
     </section>
     <!-- Наша команда -->
     <section class="section team">
-      <h2 class="section-title team">Наша команда</h2>
-      <ul class="list">
+      <h2 class="section-title">Наша команда</h2>
+      <ul class="members list">
         <li>
           <img src="./images/team_card_1.jpg" alt="Ігор Дем'яненко" width="270" height="260">
-          <h3 class="section-title member">Ігор Дем'яненко</h3>
-          <p class="profession">Product Designer</p>
+          <h3 class="section-title">Ігор Дем'яненко</h3>
+          <p class="text">Product Designer</p>
         </li>
         <li>
           <img src="./images/team_card_2.jpg" alt="Ольга Рєпіна" width="270" height="260">
-          <h3 class="section-title member">Ольга Рєпіна</h3>
-          <p class="profession">Frontend Developer</p>
+          <h3 class="section-title">Ольга Рєпіна</h3>
+          <p class="text">Frontend Developer</p>
         </li>
         <li>
           <img src="./images/team_card_3.jpg" alt="Микола Тарасов" width="270" height="260">
-          <h3 class="section-title member">Микола Тарасов</h3>
-          <p class="profession">Marketing</p>
+          <h3 class="section-title">Микола Тарасов</h3>
+          <p class="text">Marketing</p>
         </li>
         <li>
           <img src="./images/team_card_4.jpg" alt="Михайло Єрмаков" width="270" height="260">
-          <h3 class="section-title member">Михайло Єрмаков</h3>
-          <p class="profession">UI Designer</p>
+          <h3 class="section-title">Михайло Єрмаков</h3>
+          <p class="text">UI Designer</p>
         </li>
       </ul>
     </section>
@@ -101,7 +101,7 @@
 
   <!-- Підвал -->
   <footer class="footer">
-    <a href=""><span class="logo-text">Web</span><span class="footer-text">Studio</span></a>
+    <a href="" class="logo link"><span class="logo-text">Web</span><span class="footer-text">Studio</span></a>
     <address class="footer-address">
       <p class="text">м. Київ, пр-т Лесі Українки, 26</p>
       <ul class="footer-contacts list">
