--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
   <header>
 
     <nav>
-      <a href="" class="logo"> <span class="logo-text">Web</span>Studio</a>
+      <a href="" class="logo link"> <span class="logo-text">Web</span>Studio</a>
 
       <ul class="site-nav list">
         <li><a href="./index.html" class="link">Студія</a></li>
@@ -39,7 +39,7 @@
 
     <section>
 
-      <h1>Наші роботи</h1>
+      <h1 class="visually-hidden">Наші роботи</h1>
 
       <ul class="filters list">
         <li><button type="button" class="button">Усі</button> </li>
@@ -53,63 +53,63 @@
 
       <ul class="work-list list">
         <li>
-          <a href="">
+          <a href="" class="link">
             <img src="./images/project1.jpg" alt="Технокряк" width="370" height="294">
-            <h2 class="section-title type">Технокряк</h2>
+            <h2 class="section-title">Технокряк</h2>
             <p class="work-text">Веб-сайт</p>
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="" class="link">
             <img src="./images/project2.jpg" alt="Дизайн" width="370" height="294">
-            <h2 class="section-title type">Постер New Orlean vs Golden Star</h2>
+            <h2 class="section-title">Постер New Orlean vs Golden Star</h2>
             <p class="work-text">Дизайн</p>
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="" class="link">
             <img src="./images/project3.jpg" alt="Ресторан Seafood" width="370" height="294">
-            <h2 class="section-title type">Ресторан Seafood</h2>
+            <h2 class="section-title">Ресторан Seafood</h2>
             <p class="work-text">Додаток</p>
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="" class="link">
             <img src="./images/project4.jpg" alt="Проєкт Prime" width="370" height="294">
             <h2 class="section-title type">Проєкт Prime</h2>
             <p class="work-text">Маркетинг</p>
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="" class="link">
             <img src="./images/project5.jpg" alt="Проєкт Boxes" width="370" height="294">
             <h2 class="section-title type">Проєкт Boxes</h2>
             <p class="work-text">Додаток</p>
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="" class="link">
             <img src="./images/project6.jpg" alt="Inspiration has no Borders" width="370" height="294">
             <h2 class="section-title type">Inspiration has no Borders</h2>
             <p class="work-text">Веб-сайт</p>
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="" class="link">
             <img src="./images/project7.jpg" alt="Видання Limited Edition" width="370" height="294">
             <h2 class="section-title">Видання Limited Edition</h2>
             <p class="work-text">Дизайн</p>
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="" class="link">
             <img src="./images/project8.jpg" alt="Проєкт LAB" width="370" height="294">
             <h2 class="section-title">Проєкт LAB</h2>
             <p class="work-text">Дизайн</p>
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="" class="link">
             <img src="./images/project9.jpg" alt="Growing Business" width="370" height="294">
             <h2 class="section-title">Growing Business</h2>
             <p class="work-text">Маркетинг</p>
@@ -123,7 +123,7 @@
 
   <!-- Підвал -->
   <footer class="footer">
-    <a href=""><span class="logo-text">Web</span><span class="footer-text">Studio</span></a>
+    <a href="" class="logo link"><span class="logo-text">Web</span><span class="footer-text">Studio</span></a>
     <address class="footer-address">
       <p class="text">м. Київ, пр-т Лесі Українки, 26</p>
       <ul class="footer-contacts list">
